<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bgr_dlg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/setTextSize"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:layoutDirection="rtl"
            android:paddingEnd="8dp"
            android:text="@string/rTextSize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lTextSize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingRight="8dp"
            android:text="@string/xlTextSize" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:drawingCacheQuality="auto"
        android:hapticFeedbackEnabled="true"
        android:max="2"
        android:progress="0"
        android:thumb="@drawable/thumb_image"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:textDirection="rtl">

        <RadioButton
            android:id="@+id/rbRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/rTextSize"
            android:textColor="@color/colorPrimaryDark"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lTextSize"
            android:textColor="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/rbXLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xlTextSize"
            android:textColor="@color/colorPrimaryDark" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/chkBold"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="15dp"
        android:text="@string/setBold"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layoutDirection="rtl"/>


</LinearLayout>